--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,56 @@
 services:
   # ============================================
+  # Application Services
+  # ============================================
+  backend:
+    build:
+      context: .
+      dockerfile: apps/backend/Dockerfile
+    container_name: ems-backend
+    restart: unless-stopped
+    ports:
+      - "5555:5555"
+    environment:
+      PORT: "5555"
+      HOST: "0.0.0.0"
+      DATABASE_URL: postgres://postgres:postgres@postgres:5432/eventdb?sslmode=disable
+      CORS_ORIGINS: "http://localhost:5173,http://localhost:6868"
+      KRATOS_PUBLIC_URL: http://kratos:4433
+      KRATOS_ADMIN_URL: http://kratos:4434
+      SPICEDB_ENDPOINT: spicedb:50051
+      SPICEDB_PRESHARED_KEY: ${SPICEDB_PRESHARED_KEY}
+      SPICEDB_INSECURE: "true"
+      LOG_LEVEL: debug
+    depends_on:
+      postgres:
+        condition: service_healthy
+      kratos:
+        condition: service_healthy
+      spicedb:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "wget", "-q", "--spider", "http://localhost:5555/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - default
+
+  events-admin:
+    build:
+      context: .
+      dockerfile: apps/events-admin/Dockerfile
+    container_name: ems-events-admin
+    restart: unless-stopped
+    ports:
+      - "6868:80"
+    depends_on:
+      backend:
+        condition: service_healthy
+    networks:
+      - default
+
+  # ============================================
   # Database Services
   # ============================================
   postgres:
