--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "tsc",
     "db:studio": "bunx drizzle-kit studio",
-    "db:push": "bunx drizzle-kit push"
+    "db:push": "bunx drizzle-kit push",
+    "db:generate": "bunx drizzle-kit generate"
   },
   "dependencies": {
     "drizzle-kit": "0.31.7",
