--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -229,6 +229,44 @@ services:
       - "1025:1025" # SMTP
 
   # ============================================
+  # MinIO (Object Storage)
+  # ============================================
+  minio:
+    image: minio/minio:RELEASE.2025-01-20T00-00-00Z
+    container_name: ems-minio
+    restart: unless-stopped
+    ports:
+      - "9000:9000" # S3 API
+      - "9001:9001" # Console
+    environment:
+      MINIO_ROOT_USER: ${MINIO_ROOT_USER:-minioadmin}
+      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD:-minioadmin}
+    command: server /data --address ":9000" --console-address ":9001"
+    volumes:
+      - minio_data:/data
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  minio-init:
+    image: minio/mc:RELEASE.2025-01-17T00-00-00Z
+    container_name: ems-minio-init
+    depends_on:
+      minio:
+        condition: service_healthy
+    environment:
+      MINIO_ROOT_USER: ${MINIO_ROOT_USER:-minioadmin}
+      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD:-minioadmin}
+      MINIO_BUCKET: ${MINIO_BUCKET:-ems-images}
+    entrypoint: [
+      "/bin/sh",
+      "-c",
+      "mc alias set local http://minio:9000 $${MINIO_ROOT_USER} $${MINIO_ROOT_PASSWORD} && mc mb -p local/$${MINIO_BUCKET} && mc anonymous set download local/$${MINIO_BUCKET}"
+    ]
+
+  # ============================================
   # Meilisearch (Full-text Search)
   # ============================================
   meilisearch:
@@ -254,6 +292,7 @@ volumes:
   postgres_data:
   dragonfly_data:
   meili_data:
+  minio_data:
 
 networks:
   default:
