--- a/apps/events-admin/Dockerfile
+++ b/apps/events-admin/Dockerfile
@@ -55,8 +55,8 @@ COPY --from=builder /app/apps/events-admin/dist /usr/share/nginx/html
 
 # Add healthcheck
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-  CMD wget -q --spider http://localhost:80 || exit 1
+  CMD wget -q --spider http://localhost:3000/health || exit 1
 
-EXPOSE 80
+EXPOSE 3000
 
 CMD ["nginx", "-g", "daemon off;"]
