--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,11 +49,14 @@ jobs:
       - name: Install dependencies
         run: bun install
 
+      - name: Build Proto Package
+        run: bun run --filter @repo/proto build
+
       - name: Build Frontend
         run: bun run --filter events-admin build
 
       - name: TypeCheck Frontend
-        run: bun run --filter events-admin typecheck
+        run: bunx nx run events-admin:typecheck
 
   build-backend:
     runs-on: ubuntu-latest
