fix(proto): reorganize proto files into subdirectories for proper Go generation
- Move proto files into eventsv1/, searchv1/, usersv1/ subdirectories
- Update buf.gen.yaml to disable managed go_package override
- Add explicit go_package with semicolon syntax for proper package naming
- Regenerate Go protobuf files in correct directory structure

This fixes golangci-lint errors in CI about multiple packages in same directory.

--- a/packages/proto/buf.gen.yaml
+++ b/packages/proto/buf.gen.yaml
@@ -1,6 +1,8 @@
 version: v2
 managed:
   enabled: true
+  disable:
+    - file_option: go_package
 plugins:
   # Generate TypeScript types and schemas (shared across packages)
   - remote: buf.build/bufbuild/es:v2.10.1
@@ -17,6 +19,10 @@ plugins:
   # Generate Go protobuf types
   - remote: buf.build/protocolbuffers/go
     out: ../../apps/backend/gen
+    opt:
+      - paths=source_relative
   # Generate Go Connect-RPC handlers
   - remote: buf.build/connectrpc/go
     out: ../../apps/backend/gen
+    opt:
+      - paths=source_relative
