--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Build and push backend
         uses: docker/build-push-action@v5
         with:
-          context: ./apps/backend
+          context: .
           file: ./apps/backend/Dockerfile
           push: true
           tags: ${{ steps.meta-backend.outputs.tags }}
@@ -110,7 +110,7 @@ jobs:
       - name: Build and push frontend
         uses: docker/build-push-action@v5
         with:
-          context: ./apps/events-admin
+          context: .
           file: ./apps/events-admin/Dockerfile
           push: true
           tags: ${{ steps.meta-frontend.outputs.tags }}
