--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,9 +27,14 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.22'
+          go-version: '1.23'
           cache: true
           cache-dependency-path: 'apps/backend/go.sum'
+
+      - name: Download Go dependencies
+        run: |
+          cd apps/backend
+          go mod download
 
       - name: Lint Go
         uses: golangci/golangci-lint-action@v6
@@ -67,13 +72,14 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.22'
+          go-version: '1.23'
           cache: true
           cache-dependency-path: 'apps/backend/go.sum'
 
       - name: Build Backend
         run: |
           cd apps/backend
+          go mod download
           go build -o ems-backend ./cmd/server/main.go
 
       - name: Run Go Tests
