fix(ci): fix nx affected command syntax
- Use 'nx show projects --affected' to list affected projects
- Use '-t build' shorthand for target option

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,7 +101,7 @@ jobs:
         run: bun install
 
       - name: Show affected projects
-        run: bunx nx affected --base=origin/main --head=HEAD --plain
+        run: bunx nx show projects --affected --base=origin/main --head=HEAD
 
       - name: Build affected
-        run: bunx nx affected --base=origin/main --head=HEAD --target=build
+        run: bunx nx affected -t build --base=origin/main --head=HEAD
