--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,8 +28,7 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: '1.23'
-          cache: true
-          cache-dependency-path: 'apps/backend/go.sum'
+          cache: false
 
       - name: Download Go dependencies
         working-directory: apps/backend
@@ -73,8 +72,7 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: '1.23'
-          cache: true
-          cache-dependency-path: 'apps/backend/go.sum'
+          cache: false
 
       - name: Build Backend
         run: |
