--- a/apps/events-admin/Dockerfile
+++ b/apps/events-admin/Dockerfile
@@ -25,6 +25,7 @@ WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY --from=deps /app/apps/events-admin/node_modules ./apps/events-admin/node_modules
 COPY --from=deps /app/packages/proto/node_modules ./packages/proto/node_modules
+COPY --from=deps /app/packages/ui/node_modules ./packages/ui/node_modules
 
 # Copy source files
 COPY packages/ ./packages/
