--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -2,7 +2,7 @@ name: Build & Push to ACR
 
 on:
   push:
-    branches: [main, develop]
+    branches: [main]
   workflow_dispatch:
 
 env:
@@ -22,13 +22,7 @@ jobs:
       - name: Log in to Azure
         uses: azure/login@v2
         with:
-          creds: |
-            {
-              "clientId": "${{ secrets.AZURE_CLIENT_ID }}",
-              "clientSecret": "${{ secrets.AZURE_CLIENT_SECRET }}",
-              "subscriptionId": "${{ secrets.AZURE_SUBSCRIPTION_ID }}",
-              "tenantId": "${{ secrets.AZURE_TENANT_ID }}"
-            }
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Get ACR token
         id: acr-login
@@ -47,10 +41,9 @@ jobs:
         id: meta-backend
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGISTRY }}/backend
+          images: ${{ env.REGISTRY }}/ems-backend
           tags: |
-            type=ref,event=branch
-            type=sha,prefix={{branch}}-
+            type=sha,prefix=
             type=raw,value=latest,enable={{is_default_branch}}
 
       - name: Build and push backend
@@ -76,13 +69,7 @@ jobs:
       - name: Log in to Azure
         uses: azure/login@v2
         with:
-          creds: |
-            {
-              "clientId": "${{ secrets.AZURE_CLIENT_ID }}",
-              "clientSecret": "${{ secrets.AZURE_CLIENT_SECRET }}",
-              "subscriptionId": "${{ secrets.AZURE_SUBSCRIPTION_ID }}",
-              "tenantId": "${{ secrets.AZURE_TENANT_ID }}"
-            }
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Get ACR token
         id: acr-login
@@ -101,10 +88,9 @@ jobs:
         id: meta-frontend
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGISTRY }}/events-admin
+          images: ${{ env.REGISTRY }}/ems-frontend
           tags: |
-            type=ref,event=branch
-            type=sha,prefix={{branch}}-
+            type=sha,prefix=
             type=raw,value=latest,enable={{is_default_branch}}
 
       - name: Build and push frontend
@@ -115,5 +101,55 @@ jobs:
           push: true
           tags: ${{ steps.meta-frontend.outputs.tags }}
           labels: ${{ steps.meta-frontend.outputs.labels }}
+          build-args: |
+            VITE_API_URL=https://ems-backend.icycoast-91810834.westus2.azurecontainerapps.io
+            VITE_KRATOS_PUBLIC_URL=https://auth.studyverse.app
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+  build-kratos:
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Azure
+        uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Get ACR token
+        id: acr-login
+        run: |
+          TOKEN=$(az acr login --name $REGISTRY_NAME --expose-token --output tsv --query accessToken)
+          echo "ACR_TOKEN=$TOKEN" >> $GITHUB_OUTPUT
+
+      - name: Log in to ACR with Docker
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: 00000000-0000-0000-0000-000000000000
+          password: ${{ steps.acr-login.outputs.ACR_TOKEN }}
+
+      - name: Extract metadata (kratos)
+        id: meta-kratos
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/ems-kratos
+          tags: |
+            type=sha,prefix=
+            type=raw,value=latest,enable={{is_default_branch}}
+
+      - name: Build and push kratos
+        uses: docker/build-push-action@v5
+        with:
+          context: ./infra/kratos
+          file: ./infra/kratos/Dockerfile
+          push: true
+          tags: ${{ steps.meta-kratos.outputs.tags }}
+          labels: ${{ steps.meta-kratos.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
