--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,9 @@ result
 .DS_Store
 Thumbs.db
 
+# Local assets
+expo.jpg
+
 # Logs
 *.log
 npm-debug.log*
@@ -33,3 +36,8 @@ npm-debug.log*
 package-lock.json
 pnpm-lock.yaml
 yarn.lock
+
+# Binaries
+apps/backend/server
+zed
+*.tar.gz
