--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
     restart: unless-stopped
     ports:
       - "5555:5555"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     environment:
       PORT: "5555"
       HOST: "0.0.0.0"
@@ -22,6 +24,16 @@ services:
       SPICEDB_INSECURE: "true"
       MEILISEARCH_URL: http://meilisearch:7700
       MEILISEARCH_MASTER_KEY: ${MEILISEARCH_MASTER_KEY:-masterKey123}
+
+      # Important: the hostname in presigned URLs is part of the signature.
+      # Use a hostname the browser can reach without rewriting.
+      STORAGE_ENDPOINT: host.docker.internal:9000
+      STORAGE_ACCESS_KEY: ${MINIO_ROOT_USER:-minioadmin}
+      STORAGE_SECRET_KEY: ${MINIO_ROOT_PASSWORD:-minioadmin}
+      STORAGE_BUCKET: ${MINIO_BUCKET:-ems-images}
+      STORAGE_PUBLIC_BASE_URL: http://localhost:9000
+      STORAGE_USE_SSL: "false"
+
       LOG_LEVEL: debug
     depends_on:
       postgres:
@@ -232,7 +244,7 @@ services:
   # MinIO (Object Storage)
   # ============================================
   minio:
-    image: minio/minio:RELEASE.2025-01-20T00-00-00Z
+    image: minio/minio:latest
     container_name: ems-minio
     restart: unless-stopped
     ports:
@@ -251,7 +263,7 @@ services:
       retries: 5
 
   minio-init:
-    image: minio/mc:RELEASE.2025-01-17T00-00-00Z
+    image: minio/mc:latest
     container_name: ems-minio-init
     depends_on:
       minio:
@@ -263,7 +275,7 @@ services:
     entrypoint: [
       "/bin/sh",
       "-c",
-      "mc alias set local http://minio:9000 $${MINIO_ROOT_USER} $${MINIO_ROOT_PASSWORD} && mc mb -p local/$${MINIO_BUCKET} && mc anonymous set download local/$${MINIO_BUCKET}"
+      "mc alias set local http://minio:9000 $${MINIO_ROOT_USER} $${MINIO_ROOT_PASSWORD} && mc mb -p local/$${MINIO_BUCKET} && mc anonymous set download local/$${MINIO_BUCKET} && printf '<CORSConfiguration><CORSRule><AllowedOrigin>http://localhost:5173</AllowedOrigin><AllowedOrigin>http://localhost:6868</AllowedOrigin><AllowedMethod>GET</AllowedMethod><AllowedMethod>PUT</AllowedMethod><AllowedMethod>POST</AllowedMethod><AllowedMethod>HEAD</AllowedMethod><AllowedHeader>*</AllowedHeader><ExposeHeader>ETag</ExposeHeader><MaxAgeSeconds>3000</MaxAgeSeconds></CORSRule></CORSConfiguration>' > /tmp/cors.xml && mc cors set local/$${MINIO_BUCKET} /tmp/cors.xml"
     ]
 
   # ============================================
