--- a/infra/kratos/kratos.prod.yml
+++ b/infra/kratos/kratos.prod.yml
@@ -55,8 +55,11 @@ selfservice:
         providers:
           - id: microsoft
             provider: microsoft
-            client_id: $MICROSOFT_CLIENT_ID
-            client_secret: $MICROSOFT_CLIENT_SECRET
+            # IMPORTANT: client_id and client_secret MUST be set via environment variables:
+            # - SELFSERVICE_METHODS_OIDC_CONFIG_PROVIDERS_0_CLIENT_ID
+            # - SELFSERVICE_METHODS_OIDC_CONFIG_PROVIDERS_0_CLIENT_SECRET
+            client_id: "placeholder-set-via-env"
+            client_secret: "placeholder-set-via-env"
             microsoft_tenant: common
             mapper_url: file:///etc/config/kratos/microsoft-claims-mapper.jsonnet
             scope:
