feat(backend): add admin promotion endpoint for SpiceDB

--- a/apps/backend/.gitignore
+++ b/apps/backend/.gitignore
@@ -1,5 +1,5 @@
-# Compiled binary
-server
+# Compiled binary (at root of backend, not the cmd/server directory)
+/server
 
 # Test coverage
 coverage.out
